--- a/chatapp/package.json
+++ b/chatapp/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "firebase": "^10.13.0",
     "next": "14.2.5",
+    "openai": "^4.61.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-loading-icons": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
